fixed scrollbar problem

--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ header {
   height: 14.24px;
 }
 
+.hpl-section {
+  width: calc(100vw - 232px);
+}
+
 .hpl-head {
   display: flex;
   justify-content: space-between;
